[package]
name = "test-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.1", features = ["full"] }
warp = "0.3.2"
