[package]
name = "test_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.1", features = ["full"] }
warp = "0.3.2"
handle-errors = { path = "handle-errors" }
uuid = { version = "1.1.2", features = ["v4"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
sqlx = { version = "0.5.13", features = ["postgres", "migrate", "runtime-tokio-rustls"] }

[features]
