[package]
name = "test_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.1", features = ["full"] }
warp = "0.3.2"
handle-errors = { path = "handle-errors" }
uuid = { version = "1.1.2", features = ["v4"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
sqlx = { version = "0.5.13", features = ["postgres", "migrate", "runtime-tokio-rustls"] }
reqwest = { version = "0.11.11", features = ["json"] }
reqwest-retry = "0.1.5"
reqwest-middleware = "0.1.6"
rand = "0.8.5"
rust-argon2 = "1.0.0"
paseto = "2.0.2"
chrono = "0.4.19"

[features]
