[package]
name = "handle-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
reqwest-middleware = "0.1.6"
sqlx = { version = "0.5.13", features = ["migrate", "runtime-tokio-rustls", "postgres"] }
tracing = { version = "0.1.35", features = ["log"] }
warp = "0.3.2"
rust-argon2 = "1.0.0"

[features]
